Update: Supabase настроен и работает

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                 <span>Vercel развернут</span>
             </div>
             <div class="status-item">
-                <span>⏳</span>
-                <span>Supabase ожидает настройки</span>
+                <span>✅</span>
+                <span>Supabase настроен и работает</span>
             </div>
         </div>
         
